Add a plane to the scene.

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1245,322
+ViewportPos=1380,488
+ViewportId=0xE927CF2F
 Size=662,423
 Collapsed=0
 
